fixed z-index problem

--- a/src/styles/ProductSlider.module.css
+++ b/src/styles/ProductSlider.module.css
@@ -123,7 +123,7 @@
 
 .product_container:hover {
   scale: 1.1;
-  z-index: 4;
+  z-index: 7;
   transition-delay: 0.5s;
 }
 
